проект-библиотека с less

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -329,6 +329,11 @@
 
 <div class="content" role="main">
 
+  <!-- Женины компоненты -->
+  <div style="margin: 50px 50px">
+    <app-primary-button></app-primary-button>
+  </div>
+
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
 
