--- a/src/app/button/button.component.less
+++ b/src/app/button/button.component.less
@@ -53,9 +53,8 @@
     background-color: @color-blue;
 
     color: white;
-    //text-align: center;
-    text-align: left;
-
+    text-align: center;
+    //text-align: left; //лучше устанавливать только при необходимости в определённой задаче
     margin: auto;
     display: flex;
 
@@ -122,8 +121,8 @@
     background-color: #abff00;
 
     color: black;
-    //text-align: center;
-    text-align: left;
+    text-align: center;
+    //text-align: left;
 
     margin: auto;
     display: flex;
@@ -183,8 +182,8 @@
     background-color: #b8ff35;
 
     color: gray;
-    //text-align: center;
-    text-align: left;
+    text-align: center;
+    //text-align: left;
 
     margin: auto;
     display: flex;
