--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,5 +1,19 @@
-<div [class]="className">
-  <p>
-    <ng-content></ng-content>
-  </p>
+<div [class]="className" (click)="load_spinner()">
+  <div class="row" style="height: 94%; margin: auto; padding: 5px;">
+
+    <div *ngIf="isSpinner" >
+      <app-spinner [spinnerType]="spinnerType" style="font-size: 4px; float: left; margin-right: 10px"></app-spinner>
+    </div>
+
+      <p style="margin: auto;">
+        <ng-content></ng-content>
+      </p>
+  </div>
 </div>
+
+<!--<div [class]="className">-->
+<!--  <p>-->
+<!--    <ng-content></ng-content>-->
+<!--  </p>-->
+<!--</div>-->
+
