теперь в двух случаях из трёх текст рядом со спиннером стоит нормально

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -360,7 +360,7 @@
     <!-- кнопки со спиннером -->
     <div class="column">
       <!--      <app-spinner-button></app-spinner-button>-->
-      <app-button size="large" type="spinner" style="width: 100%;">New spinner</app-button>
+      <app-button size="large" type="spinner" >New spinner</app-button>
     </div>
   </div>
 
