теперь в двух случаях из трёх текст рядом со спиннером стоит нормально, вставила старую кнопку со спиннером в качестве приера, если в неё поменьять текст на Old spinner, текст весь съедет, не понимаю, почему. Вставить текст и спиннер в кнопке в разные column не помогает

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -359,13 +359,20 @@
   <div class="row">
     <!-- кнопки со спиннером -->
     <div class="column">
+      <app-spinner-button></app-spinner-button>
+    </div>
+
+    <div class="column">
       <!--      <app-spinner-button></app-spinner-button>-->
-      <app-button size="large" type="spinner" >New spinner</app-button>
+      <app-button size="large" type="spinner">New spinner</app-button>
     </div>
   </div>
 
+
   <div class="row">
-    <h3 style="margin: auto">Spinners</h3>
+    <div class="column">
+      <h3 style="margin: auto">Spinners</h3>
+    </div>
   </div>
 
   <div class="row" style="height: 150px">
