--- a/src/app/button/spinner-button/spinner-button.component.html
+++ b/src/app/button/spinner-button/spinner-button.component.html
@@ -1,5 +1,5 @@
-<app-button [loading]="loading" type="spinner" style="width: 100%;" (click)="load_spinner()">
-  <div class="row" style="height: 94%; margin: auto; padding: 5px;">
+<app-button style="width: 100%;" (click)="load_spinner()">  <!--  [loading]="loading" type="spinner"-->
+  <div class="row" style="height: 90%; margin: auto; padding: 5px;">
     <app-spinner [spinnerType]="spinnerType" style="font-size: 4px; float: left; margin-right: 10px"></app-spinner>
     <p style="font-size: 15px; margin: auto;">Spinner Button</p>
   </div>
