--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -368,11 +368,21 @@
     </div>
   </div>
 
+  <div class="row">
+    <h3 style="margin: auto">Inputs</h3>
+  </div>
 
   <div class="row">
-    <div class="column">
-      <h3 style="margin: auto">Spinners</h3>
-    </div>
+<!--    <div class="column">-->
+      <app-input></app-input>
+<!--    </div>-->
+<!--    <div class="column">-->
+
+<!--    </div>-->
+  </div>
+
+  <div class="row">
+    <h3 style="margin: auto">Spinners</h3>
   </div>
 
   <div class="row" style="height: 150px">
