input уменьшается, если удалить весь текст и увеличивается, если нажать enter. но уже текст посередине блока и нет полос прокрутки.

--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,5 +1,5 @@
-<div id="parent" contenteditable="true">
-  <div id="child" >
+<div id="parent" >
+  <div id="child" contenteditable="true">
     <p style="color: grey">
       <ng-content></ng-content>
       {{content}}
