не понимаю, почему не работает функция, которая при нажатии enter должна не позволить переход на новую строку
input уменьшается, если удалить весь текст и нажать на backspase ещё раз и увеличивается, если нажать enter. но уже текст посередине блока и нет полос прокрутки.

--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,5 +1,5 @@
 <div id="parent" >
-  <div id="child" contenteditable="true">
+  <div id="child" contenteditable="true" (keyup.enter)="skillsHandleEnter($event)">
     <p style="color: grey">
       <ng-content></ng-content>
       {{content}}
