--- a/src/app/input/input.component.less
+++ b/src/app/input/input.component.less
@@ -10,13 +10,12 @@
 }
 
 #child {
-  overflow-x: hidden;
-
-  white-space: nowrap; // для того, чтобы текст не переходил на другую строку
+  overflow-x: hidden;  // полос прокрутки нет, а работает как со значением scroll
+  white-space: nowrap; // для того, чтобы текст не переходил на другую строку сам
   height: 40px;
-  width: 170px;
-  max-height: 40px;
-  max-width: 170px;
+  width: 170px; // обязательное значение здесь
+  //max-height: 40px; // не понимаю, почему это не помогает сохранить размер поля ввода при нажатии enter
+  //max-width: 170px;
   //min-height: 40px; // не понимаю, почему это не помогает сохранить ту же высоту блока, даже если весь текст удалён
   //min-width: 170px;
 
@@ -24,7 +23,7 @@
   border: 1px solid black;
 
   display: table-cell!important; // связывает с родительским блоком, объявленным как таблица
-  vertical-align: middle; // и делает текст вертикально по центру
+  vertical-align: middle;        // и делает текст расположенным вертикально по центру
 
   //box-shadow: 0 2px 4px rgba(0, 0, 0, .25); //сделать тень внутрь блока
 }
