--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,6 +1,6 @@
 <div id="parent" >
-  <div id="child" contenteditable="true" (keyup.enter)="skillsHandleEnter($event)">
-    <p style="color: grey">
+  <div id="child" contenteditable="true" (keyup.enter)="stopEnter($event)" (keyup.input)="getTextID($event)">
+    <p [id]="textId">
       <ng-content></ng-content>
       {{content}}
     </p>
