--- a/src/app/input/input.component.less
+++ b/src/app/input/input.component.less
@@ -15,7 +15,7 @@
   height: 40px;
   width: 170px; // обязательное значение здесь
   //max-height: 40px; // не понимаю, почему это не помогает сохранить размер поля ввода при нажатии enter
-  //max-width: 170px;
+  max-width: 170px; // помогает не удлиннятся полю ввода
   //min-height: 40px; // не понимаю, почему это не помогает сохранить ту же высоту блока, даже если весь текст удалён
   //min-width: 170px;
 
@@ -26,4 +26,12 @@
   vertical-align: middle;        // и делает текст расположенным вертикально по центру
 
   //box-shadow: 0 2px 4px rgba(0, 0, 0, .25); //сделать тень внутрь блока
+}
+
+#empty {
+  color: grey;
+}
+
+#fill {
+  color: black;
 }
