спннер в кнопке New spinner текст не сдвигает, выглядит нормально. кнопка Loading page работает неправильно. не работают setTimeout в обеих кнопках.

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -11,3 +11,35 @@
   justify-content: space-between;
   margin: 15px;
 }
+
+.elem_center {
+  margin: auto;
+}
+
+.biggestDiv {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.spinner_box_block_all {
+  height:140px;
+  width: 140px;
+  margin: auto;
+  position: absolute;
+
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 999;
+}
+
+.loadingPage {
+  //position: absolute;
+  min-height: 100%;
+  z-index: 998;
+  background-color: grey;
+  opacity: 0.5;
+}
