--- a/src/app/spinner/spinner.component.less
+++ b/src/app/spinner/spinner.component.less
@@ -402,13 +402,22 @@
     border-radius: 50%;
     width: 7em;
     height: 7em;
+    //width: 100%;
+    //height: 100%;
+
   }
 
   .loader {
-    margin: 7px 0;
+    //position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 999;
+    //margin: 7px 0;
     //text-align: center;
     //font-size: 5px; //лучше отдельно устанавливать для конкретной задачи
-    position: relative;
+    //position: relative;
     //text-indent: -9999em;
     border-top: 1.1em solid rgb(181, 181, 181);
     border-right: 1.1em solid rgb(181, 181, 181);
