--- a/src/app/button/button.component.less
+++ b/src/app/button/button.component.less
@@ -267,16 +267,6 @@
       border: 1px solid @color-blue;
     }
   }
-
-  //&danger {
-  //  color: #ff0026;
-  //  border: 1px dashed #ff0026;
-  //
-  //  &:hover {
-  //    color: #ff1f41;
-  //    border: 1px dashed #ff1f41;
-  //  }
-  //}
 }
 
 .dashed-button {
@@ -345,20 +335,6 @@
       border: 1px dashed @color-blue;
     }
   }
-
-  //&danger {
-  //  color: #ff0026;
-  //  border: 1px dashed #ff0026;
-  //
-  //  &:hover {
-  //    color: #ff1f41;
-  //    border: 1px dashed #ff1f41;
-  //  }
-  //}
-}
-
-p {
-  margin: auto;
 }
 
 .danger-button {
@@ -425,28 +401,33 @@ p {
     }
   }
 }
-//.choose-size{
-//  display: inline-flex;
-//  height: 40px;
-//  margin: 15px;
-//
-//  border-radius: 2px;
-//  cursor: pointer;
-//
-//  &__item{
-//    width: 86px;
-//    color: black;
-//    border: 1px solid darkgray;
-//
-//    &:hover{
-//      color: @color-blue;
-//      border: 1px solid @color-blue;
-//      box-shadow: 0 2px 2px @color-blue;
-//    }
-//  }
-//
-//  &__p {
-//    text-align: center;
-//    margin: 7px auto;
-//  }
-//}
+
+.spinner-style {
+  font-size: 4px;
+  float: left;
+  margin-right: 10px;
+}
+
+.spinner_button_box {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  margin: auto 0 auto 5px;
+}
+
+.button {
+  margin: auto;
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.p-loading {
+  margin: auto 5px;
+}
+
+.p {
+  margin: auto;
+}
