--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,8 +1,8 @@
-<div id="parent" >
-  <div id="child" contenteditable="true" (keyup.enter)="stopEnter($event)" (keyup.input)="getTextID($event)">
+<div id="parent">
+  <div id="child" contenteditable="true" (keydown)="stopEnter($event)" (focus)="getTextID($event)">
     <p [id]="textId">
-      <ng-content></ng-content>
-      {{content}}
+        <ng-content></ng-content>
+        {{content}}
     </p>
   </div>
 </div>
