Спиннер посередине поверх других элементов. Кнопка Loading page работает. Работае setTimeout в обеих кнопках, но не при указании имени функции, а только когда функция полностью прописана в setTimeout.
Сейчас не понятно, почему (click) вызывается даже если просто нажать на родительский div, а не на кнопку. Почему при загрузке страницы элементы не блокируются даже с z-index: 998. Ищу способ способ блокировки элементов без ручной смены css у каждого из них.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -308,12 +308,12 @@
 <!--<head>-->
 <!--  <title></title>-->
 <!--</head>-->
+<div *ngIf="isLoadingPage" class="spinner_box_block_all">
+  <app-spinner spinnerType="endangered_circles"></app-spinner>
+</div>
+
 <div class="BiggestDiv">
   <div [class]="page">
-
-    <div *ngIf="isLoadingPage" class="spinner_box_block_all">
-      <app-spinner spinnerType="merging_circles"></app-spinner>
-    </div>
 
     <div class="content" role="main">
 
