--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -27,16 +27,16 @@ html {
 }
 
 .spinner_box_block_all {
-  height: 80px;
-  width: 80px;
-  margin: 200px auto;
+  height: 40px;
+  width: 40px;
+  transform: translate(50%,50%);
   position: absolute;
   z-index: 999;
 
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
+  // способ блокировки элементов без ручной смены css у каждого из них
+
+  left: 47%;
+  top: 45%;
 }
 
 .nullPage {
