--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -2,7 +2,7 @@
   <div class="button">
 
     <div *ngIf="isSpin" class="spinner_button_box">
-      <app-spinner [spinnerType]="spinnerType" class="spinner-style"></app-spinner>
+      <app-spinner [spinnerType]="spinnerType" [class]="classSpinner"></app-spinner>
     </div>
 
       <p [class]="classText">
